// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocTest:embedded > footnotes 1`] = `
"<div class="paragraph">
<p>The hail-and-rainbow protocol can be initiated at five levels: double, tertiary, supernumerary,
supermassive, and apocalyptic party.<sup class="footnote">[<a id="_footnoteref_1" class="footnote" href="#_footnotedef_1" title="View footnote.">1</a>]</sup>
A bold statement.<sup class="footnote" id="_footnote_disclaimer">[<a id="_footnoteref_2" class="footnote" href="#_footnotedef_2" title="View footnote.">2</a>]</sup></p>
</div>
<div class="paragraph">
<p>Another outrageous statement.<sup class="footnoteref">[<a class="footnote" href="#_footnotedef_2" title="View footnote.">2</a>]</sup></p>
</div>
<div id="footnotes">
<hr>
<div class="footnote" id="_footnotedef_1">
<a href="#_footnoteref_1">1</a>. The double hail-and-rainbow level makes my toes tingle.
</div>
<div class="footnote" id="_footnotedef_2">
<a href="#_footnoteref_2">2</a>. Opinions are my own.
</div>
</div>"
`;

exports[`DocTest:embedded > title 1`] = `"<h1>The Dangerous and Thrilling Documentation Chronicles</h1>"`;

exports[`DocTest:embedded > toc 1`] = `
"<div id="toc" class="toc">
<div id="toctitle">Table of Contents</div>
<ul class="sectlevel1">
<li><a href="#_cavern_glow">Cavern Glow</a></li>
</ul>
</div>
<div class="sect1">
<h2 id="_cavern_glow">Cavern Glow</h2>
<div class="sectionbody">

</div>
</div>"
`;

exports[`DocTest:embedded > toc-title 1`] = `
"<div id="toc" class="toc">
<div id="toctitle">Table of Adventures</div>
<ul class="sectlevel1">
<li><a href="#_cavern_glow">Cavern Glow</a></li>
</ul>
</div>
<div class="sect1">
<h2 id="_cavern_glow">Cavern Glow</h2>
<div class="sectionbody">

</div>
</div>"
`;
